--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,6 +1,24 @@
-{
+// {
+//     "version": 2,
+//     "routes": [
+//       { "src": "/(.*)", "dest": "/api/app.js" }
+//     ]
+//   }
+
+
+  {
     "version": 2,
+    "builds": [
+      {
+        "src": "backend/api/app.js",
+        "use": "@vercel/node"
+      }
+    ],
     "routes": [
-      { "src": "/(.*)", "dest": "/api/app.js" }
+      {
+        "src": "/api/(.*)",
+        "dest": "/backend/api/app.js"
+      }
     ]
   }
+  
