--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,7 +1,16 @@
 {
     "version": 2,
+    "builds": [
+      {
+        "src": "backend/api/app.js",
+        "use": "@vercel/node"
+      }
+    ],
     "routes": [
-      { "src": "/(.*)", "dest": "/api/app.js" }
+      {
+        "src": "/api/(.*)",
+        "dest": "/backend/api/app.js"
+      }
     ]
   }
-
+  
