--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,16 +1,7 @@
 {
     "version": 2,
-    "builds": [
-      {
-        "src": "backend/api/app.js",
-        "use": "@vercel/node"
-      }
-    ],
     "routes": [
-      {
-        "src": "/api/(.*)",
-        "dest": "/backend/api/app.js"
-      }
+      { "src": "/(.*)", "dest": "/api/app.js" }
     ]
   }
   
