--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -3,18 +3,18 @@
     "version": 2,
     "builds": [
       {
-        "src": "api/app.js",    
+        "src": "backend/api/app.js",    
         "use": "@vercel/node"            
       }
     ],
     "routes": [
       {
-        "src": "/(.*)",              
-        "dest": "/api/app.js"    
+        "src": "/api/auth(.*)",              
+        "dest": "/backend/api/app.js"    
       },
       {
         "src": "/",                     
-        "dest": "/api/app.js"   
+        "dest": "/backend/api/app.js"   
       }
     ]
   }
